--- a/.github/workflows/update-events.yml
+++ b/.github/workflows/update-events.yml
@@ -26,3 +26,13 @@ jobs:
         env:
           GROK_API_KEY: ${{ secrets.GROK_API_KEY }}
         run: python script.py
+
+      - name: Commit and push updated events.json
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add events.json
+          git commit -m "Update events.json via workflow" || echo "No changes to commit"
+          git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
