--- a/config_logic.json
+++ b/config_logic.json
@@ -1,29 +1,26 @@
 {
   "model": "grok-3-mini",
-  "temperature": 0.7,
+  "temperature": 0.3,
   "max_tokens": 2048,
   "sources": [
-    "Albany.com events calendar",
-    "Times Union weekly picks",
-    "Eventbrite for Capital District",
-    "Empire State Plaza site",
-    "Albany Institute of History & Art",
-    "all theatres in the capital region",
-    "barpeople.com",
-    "two buttons deep",
-    "the daily gazette",
-    "news about new restaurants"
-
+    "https://www.albany.com/events/",
+    "https://www.timesunion.com/events/",
+    "https://www.eventbrite.com/d/ny--albany/events/",
+    "https://empirestateplaza.ny.gov/events",
+    "https://www.albanyinstitute.org/programs-and-events",
+    "https://www.proctors.org/events/",
+    "https://www.theegg.org/events",
+    "https://www.palacealbany.org/events",
+    "https://www.troymusichall.org/events",
+    "https://www.thecohoesmusichall.org/events"
   ],
-  "instructions": "Aggregate from reliable, non-commercial sources; avoid ads or low-quality events. Include sources in output.",
+  "instructions": "Only include events that can be verified on public web pages. Each event must include a real http(s) URL in the 'link' field pointing to the event page. Include exact source URLs (http/https) in the output 'sources' array. Do not fabricate events or links. Omit any events that cannot be verified.",
   "region": "New York's Capital District (Albany, Schenectady, Troy, Saratoga, and surrounding areas)",
-  "timeframe": "Upcoming events for the next 30-60 days, starting from current date.",
+  "timeframe": "Upcoming events for the next 60 days, starting from the current date.",
   "user_predilections": [
     "focus on music and festivals, theatre, art, new restaurants, and outdoor activities",
-    "exclude commercial/DIY events",
-    "prioritize outdoor or free activities, but indoor stuff is essential in albany",
-    "min_faves:10 for popularity filter",
-    "have a lot of options - perhaps focus on upcoming events in the next 30-60 days"
+    "exclude low-quality or purely promotional events",
+    "prioritize outdoor or free activities when available, but include strong indoor options as needed"
   ],
   "branding": "Include subtle branding like 'New Chitte' for recent events; ensure output is clean and punny where appropriate.",
   "json_schema": {
@@ -35,7 +32,7 @@
         "description": "string",
         "category": "string",
         "is_new": "boolean",
-        "link": "string (optional)",
+        "link": "string",
         "venue_info": {
           "yelp_url": "string",
           "maps_url": "string",
